--- a/Practical/Practical-1.html
+++ b/Practical/Practical-1.html
@@ -1,30 +1,31 @@
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
-        <title>First Web Page on github</title>
+        <title>Practical-1</title>
         <style>
-            body {
-              background-color: SkyBlue;
-            }
-            h1 {
-              color:royalblue;
-            }
-            h2{
-                color:salmon;
-            }
-            p{
-                color:darkviolet;
+            h3 {
+              color:red;
             }
           </style>
           <meta name="viewport" content="width=device-width, initial-scale=" />
     </head>
     <body>
-        <h1><center><i>Web Page on Github</i></center></h1>
-      <h2><center><b>About Me</b></center></h2>
-        <p>
-            Hey, I am Ayush Goyal. I am from Goverdhan Mathura and i am persuing B.tech. This is my First Web Page on Github.
-        </p>
-      
+        <h3>Practical-1: Craete a Web page including HTML basic skeleton using Offline HTML Editor and ONLINE Sandbox Environment</h3>
+      <h1><b>Welcome to Fullstack Course</b></h1>
+      <h3>About Course</h3>
+      <p>
+        Front-end web development is everything involved in programming the user interface of a web application.Typically it refers to
+        the Hypertext Markup Language(HTML), Cascading style Sheets(CSS) and JavaScript portion of web site production as opposed to the
+        database or server-side programming.it encompasses everything from building a simple page of HTML text to creative complex,responsive
+        HTML5 websites designed to be accessed via various different browsers,devices and screen sizes.
+      </p>
+      <h2>Output</h2>
+      <h2><center>Offiline HTML Editor</center></h2>
+      <br/>
+      <img src="/FullStack/images/HTMLAssignment-1B.jpg" alt="Offline HTML Editor">
+      <h2>Online HTML Editor</h2>
+      <br/>
+      <img src="/FullStack-1/images/HTMLAssignment-1A.jpg" alt="Online HTML Editor">
     </body>
 </html>
