UPDATED with images

--- a/Practical/Practical-1.html
+++ b/Practical/Practical-1.html
@@ -7,6 +7,9 @@
             h3 {
               color:red;
             }
+            img{
+              width:70%;
+            }
           </style>
           <meta name="viewport" content="width=device-width, initial-scale=" />
     </head>
@@ -21,11 +24,13 @@
         HTML5 websites designed to be accessed via various different browsers,devices and screen sizes.
       </p>
       <h2>Output</h2>
-      <h2><center>Offiline HTML Editor</center></h2>
+      <section style="text-align: center;">
+      <h2>Offiline HTML Editor</h2>
       <br/>
-      <img src="/FullStack/images/HTMLAssignment-1B.jpg" alt="Offline HTML Editor">
+      <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\HTMLAssignment-1B.jpg" alt="Offline HTML Editor">
       <h2>Online HTML Editor</h2>
       <br/>
-      <img src="/FullStack-1/images/HTMLAssignment-1A.jpg" alt="Online HTML Editor">
+      <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\HTMLAssignment-1A.jpg" alt="Online HTML Editor">
+      </section>
     </body>
 </html>
