--- a/Practical/Practical-2.html
+++ b/Practical/Practical-2.html
@@ -1,30 +1,30 @@
-<html>
+<html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
-        <title>First Web Page on github</title>
+        <title>Practical-2</title>
         <style>
-            body {
-              background-color: SkyBlue;
+            h3 {
+              color:red;
             }
-            h1 {
-              color:royalblue;
-            }
-            h2{
-                color:salmon;
-            }
-            p{
-                color:darkviolet;
+            img{
+              width:70%;
             }
           </style>
           <meta name="viewport" content="width=device-width, initial-scale=" />
     </head>
     <body>
-        <h1><center><i>Web Page on Github</i></center></h1>
-      <h2><center><b>About Me</b></center></h2>
-        <p>
-            Hey, I am Ayush Goyal. I am from Goverdhan Mathura and i am persuing B.tech. This is my First Web Page on Github.
-        </p>
-      
-    </body>
+        <h3>Practical-2: Live your First Web-Page on Git-Hub.</h3>
+      <h1><b>Welcome to Fullstack Course</b></h1>
+      <h2>About Course</h2>
+      <p>
+        Front-end web development is everything involved in programming the user interface of a web application.Typically it refers to
+        the Hypertext Markup Language(HTML), Cascading style Sheets(CSS) and JavaScript portion of web site production as opposed to the
+        database or server-side programming.it encompasses everything from building a simple page of HTML text to creative complex,responsive
+        HTML5 websites designed to be accessed via various different browsers,devices and screen sizes.
+      </p>
+      <h2>Output</h2>
+      <section style="text-align: center;">
+      <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\HTMLAssignment2.jpg" alt="Live Page on Git-Hub">
+      </section>
 </html>
