--- a/Practical/Practical-2.html
+++ b/Practical/Practical-2.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>Practical-2</title>
+        <base href="https://ayushgoyal-cs.github.io">
         <style>
             h3 {
               color:red;
