--- a/Practical/Practical-3.html
+++ b/Practical/Practical-3.html
@@ -3,6 +3,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>Practical-3</title>
+        <base href="https://ayushgoyal-cs.github.io">
         <style>
             h2 {
               color:red;
