--- a/Practical/Practical-1.html
+++ b/Practical/Practical-1.html
@@ -28,10 +28,10 @@
       <section style="text-align: center;">
       <h2>Offiline HTML Editor</h2>
       <br/>
-      <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\HTMLAssignment-1B.jpg" alt="Offline HTML Editor">
+      <img src="\FullStack\images\HTMLAssignment-1B.jpg" alt="Offline HTML Editor">
       <h2>Online HTML Editor</h2>
       <br/>
-      <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\HTMLAssignment-1A.jpg" alt="Online HTML Editor">
+      <img src="\FullStack\images\HTMLAssignment-1A.jpg" alt="Online HTML Editor">
       </section>
     </body>
 </html>
