--- a/Practical/Practical-2.html
+++ b/Practical/Practical-2.html
@@ -26,6 +26,6 @@
       </p>
       <h2>Output</h2>
       <section style="text-align: center;">
-      <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\HTMLAssignment2.jpg" alt="Live Page on Git-Hub">
+      <img src="\FullStack\images\HTMLAssignment2.jpg" alt="Live Page on Git-Hub">
       </section>
 </html>
