--- a/Practical/Practical-4.html
+++ b/Practical/Practical-4.html
@@ -26,13 +26,13 @@
         </p>
         <h1><b>List of Practicals</b></h1>
         <p>
-            1.Create a Web Page including HTML basic skeleton using offline HTML Editor and Online Sandbox Environment. <a href="C:\Users\ayush\Documents\Full Stack\FullStack\Practical\Practical-1.html">Practical-1</a>
+            1.Create a Web Page including HTML basic skeleton using offline HTML Editor and Online Sandbox Environment. <a href="\FullStack\Practical\Practical-1.html">Practical-1</a>
         </p>
         <p>
-            2.Live your First Web-Page on Git-Hub. <a href="C:\Users\ayush\Documents\Full Stack\FullStack\Practical\Practical-2.html">Practical-2</a>
+            2.Live your First Web-Page on Git-Hub. <a href="\FullStack\Practical\Practical-2.html">Practical-2</a>
         </p>
         <p>
-            3.Create a Web-Page showing a basic HTML structure using character Entities and span tag. <a href="C:\Users\ayush\Documents\Full Stack\FullStack\Practical\Practical-3.html">Practical-3</a>
+            3.Create a Web-Page showing a basic HTML structure using character Entities and span tag. <a href="\FullStack\Practical\Practical-3.html">Practical-3</a>
         </p>
     </body>
 </html>
