--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>
             3.Create a Web-Page showing a basic HTML structure using character Entities and span tag. <a href="\FullStack\Practical\Practical-3.html">Practical-3</a>
         </p>
-        4.Create a website having list of all practicals and their individual practical page links. <a href="\Full Stack\FullStack\Practical\Practical-3.html">Practical-4</a>
+        4.Create a website having list of all practicals and their individual practical page links. <a href="\FullStack\Practical\Practical-4.html">Practical-4</a>
         <p>
 
         </p>
