updating menu map

--- a/Practical/Practical-5.html
+++ b/Practical/Practical-5.html
@@ -7,14 +7,14 @@
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-        <img src="/images/practical-5.jpg" width="400px" height="140px" alt="Practical Menu" border="10px" usemap="#map1"/>
+       <center><img src="\FullStack\images\practical-5.jpg" width="1000px" height="45px" alt="Practical Menu" usemap="#map1"/></center>
         <map id="map1" name="map1">
-        <area href="/index.html" shape="rect" coords="0,0,131,69" alt="Home"/>
-        <area href="Practical-1.html" shape="rect" coords="140,0,359,69" alt="Practical-1"/>
-        <area href="Practical-2.html" shape="rect" coords="366,0,611,69" alt="Practical-2"/>
-        <area href="Practical-3.html" shape="rect" coords="619,0,854,69" alt="Practical-3"/>
-        <area href="Practical-4.html" shape="rect" coords="861,0,1098,69" alt="Practical-4"/>
-        <area href="Practical-5.html" shape="rect" coords="1109,0,1345,69" alt="Practical-5"/>
+        <area href="\FullStack\index.html" shape="rect" coords="0,0,100,69" alt="Home"/>
+        <area href="\FullStack\Practical\Practical-1.html" shape="rect" coords="100,0,270,45" alt="Practical-1"/>
+        <area href="\FullStack\Practical\Practical-2.html" shape="rect" coords="270,0,458,45" alt="Practical-2"/>
+        <area href="\FullStack\Practical\Practical-3.html" shape="rect" coords="458,0,638,45" alt="Practical-3"/>
+        <area href="\FullStack\Practical\Practical-4.html" shape="rect" coords="638,0,820,45" alt="Practical-4"/>
+        <area href="\FullStack\Practical\Practical-5.html" shape="rect" coords="820,0,1000,45" alt="Practical-5"/>
         </map>
     </body>
 </html>
