adding combined image of front end technologies

--- a/Practical/Practical-5.html
+++ b/Practical/Practical-5.html
@@ -4,6 +4,15 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>Practical-5</title>
+        <style>
+            body{
+                background-color:lightgray;
+            }
+            h1{
+                color: white;
+                text-align: center;
+            }
+        </style>
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
@@ -16,5 +25,17 @@
         <area href="\FullStack\Practical\Practical-4.html" shape="rect" coords="638,0,820,45" alt="Practical-4"/>
         <area href="\FullStack\Practical\Practical-5.html" shape="rect" coords="820,0,1000,45" alt="Practical-5"/>
         </map>
+        <h1>
+            Introduction to Front-End Technologies
+        </h1>
+        <center><img src="\FullStack\images\Practical-5a.jpg" alt="Front-End Technologies" usemap="#map2"/></center>
+        <map id="map2" name="map2">
+            <area href="" shape="rect" coords="19,8,170,166" alt="HTML5"/>
+            <area href="" shape="circle" coords="290,95,92" alt="CSS"/>
+            <area href="" shape="rect" coords="25,197,170,337" alt="JAVASCRIPT"/>
+            <area href="" shape="poly" coords="232,225,287,203,346,223,337,300,288,327,238,300" alt="BOOTSTRAP"/>
+
+        </map>
+
     </body>
 </html>
