--- a/Practical/Practical-5.html
+++ b/Practical/Practical-5.html
@@ -7,16 +7,20 @@
         <style>
             body{
                 background-color:lightgray;
+                text-align: center;
             }
             h1{
                 color: white;
                 text-align: center;
             }
+            p{
+                color: red;
+            }
         </style>
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-       <center><img src="\FullStack\images\practical-5.jpg" width="1000px" height="45px" alt="Practical Menu" usemap="#map1"/></center>
+        <img src="\FullStack\images\practical-5.jpg" width="1000px" height="45px" alt="Practical Menu" usemap="#map1"/>
         <map id="map1" name="map1">
         <area href="\FullStack\index.html" shape="rect" coords="0,0,100,69" alt="Home"/>
         <area href="\FullStack\Practical\Practical-1.html" shape="rect" coords="100,0,270,45" alt="Practical-1"/>
@@ -28,7 +32,7 @@
         <h1>
             Introduction to Front-End Technologies
         </h1>
-        <center><img src="\FullStack\images\Practical-5a.jpg" alt="Front-End Technologies" usemap="#map2"/></center>
+        <img src="\FullStack\images\Practical-5a.jpg" alt="Front-End Technologies" usemap="#map2"/>
         <map id="map2" name="map2">
             <area href="" shape="rect" coords="19,8,170,166" alt="HTML5"/>
             <area href="" shape="circle" coords="290,95,92" alt="CSS"/>
@@ -36,6 +40,7 @@
             <area href="" shape="poly" coords="232,225,287,203,346,223,337,300,288,327,238,300" alt="BOOTSTRAP"/>
 
         </map>
+        <p>Click on any part of logo to know more about these technologies.</p>
 
     </body>
 </html>
