decription about front end technologies

--- a/Practical/Practical-5.html
+++ b/Practical/Practical-5.html
@@ -34,10 +34,10 @@
         </h1>
         <img src="\FullStack\images\Practical-5a.jpg" alt="Front-End Technologies" usemap="#map2"/>
         <map id="map2" name="map2">
-            <area href="" shape="rect" coords="19,8,170,166" alt="HTML5"/>
-            <area href="" shape="circle" coords="290,95,92" alt="CSS"/>
-            <area href="" shape="rect" coords="25,197,170,337" alt="JAVASCRIPT"/>
-            <area href="" shape="poly" coords="232,225,287,203,346,223,337,300,288,327,238,300" alt="BOOTSTRAP"/>
+            <area href="\FullStack\HTML.html" shape="rect" coords="19,8,170,166" alt="HTML5"/>
+            <area href="\FullStack\CSS.html" shape="circle" coords="290,95,92" alt="CSS"/>
+            <area href="\FullStack\JS.html" shape="rect" coords="25,197,170,337" alt="JAVASCRIPT"/>
+            <area href="\FullStack\BOOTSTRAP.html" shape="poly" coords="232,225,287,203,346,223,337,300,288,327,238,300" alt="BOOTSTRAP"/>
 
         </map>
         <p>Click on any part of logo to know more about these technologies.</p>
