--- a/BOOTSTRAP.html
+++ b/BOOTSTRAP.html
@@ -4,10 +4,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>BootStrap</title>
+        <style>
+            p{
+                background-color:grey ;
+                text-align: justify;
+                padding: 20px;
+                color: white;
+            }
+            body{
+                background-color: lightgrey;
+            }
+        </style>
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-        <img src="\FullStack\images\bootstrap.jpg" alt="BOOTSTRAP"/>
+        <center><img src="\FullStack\images\bootstrap.jpg" alt="BOOTSTRAP"/></center>
         <p>
             Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.
             It contains CSS- and (optionally) JavaScript-based design templates for typography, forms, buttons, navigation, and
