--- a/HTML.html
+++ b/HTML.html
@@ -4,10 +4,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>HTML</title>
+        <style>
+            p{
+                background-color:grey ;
+                text-align: justify;
+                padding: 20px;
+                color: white;
+            }
+            body{
+                background-color: lightgrey;
+            }
+        </style>
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-        <img src="\FullStack\images\html.jpg" alt="HTML"/>
+        <center><img src="\FullStack\images\html.jpg" alt="HTML"/></center>
         <p>
             Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed
             in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting
