--- a/JS.html
+++ b/JS.html
@@ -4,10 +4,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>HTML</title>
+        <style>
+            p{
+                background-color:grey ;
+                text-align: justify;
+                padding: 20px;
+                color: white;
+            }
+            body{
+                background-color: lightgrey;
+            }
+        </style>
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-        <img src="\FullStack\images\javascript.jpg" alt="JAVASCRIPT"/>
+        <center><img src="\FullStack\images\javascript.jpg" alt="JAVASCRIPT"/></center>
         <p>
             JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
             JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax,dynamic
