--- a/CSS.html
+++ b/CSS.html
@@ -4,10 +4,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>CSS</title>
+        <style>
+            p{
+                background-color:grey ;
+                text-align: justify;
+                padding: 20px;
+                color: white;
+            }
+            body{
+                background-color: lightgrey;
+            }
+        </style>
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-        <img src="\FullStack\images\css.jpg" alt="CSS"/>
+        <center><img src="\FullStack\images\css.jpg" alt="CSS"/></center>
         <p>
             Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document
             written in a markup language like HTML.CSS is a cornerstone technology of the World Wide Web, alongside
