--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </p>
         4.Create a website having list of all practicals and their individual practical page links. <a href="\FullStack\Practical\Practical-4.html">Practical-4</a>
         <p>
-
+        5.Create a Web-Page showing the use of Image-Map in the Web Application. <a href="\FullStack\Practical\Practical-5.html">Practical-5</a>
         </p>
     </body>
 </html>
