--- a/CSS.html
+++ b/CSS.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
-        <title>CSS</title>
+        <title>About CSS</title>
         <style>
             p{
                 background-color:grey ;
