--- a/HTML.html
+++ b/HTML.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
-        <title>HTML</title>
+        <title>About HTML</title>
         <style>
             p{
                 background-color:grey ;
