--- a/BOOTSTRAP.html
+++ b/BOOTSTRAP.html
@@ -2,7 +2,7 @@
 <html lang="eng">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=2.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>About BootStrap</title>
         <style>
             p{
@@ -18,7 +18,7 @@
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-        <center><img src="\FullStack\images\bootstrap.jpg" alt="BOOTSTRAP"/></center>
+        <center><img src="\FullStack\images\bootstrap.jpg" width="500px" height="300px" alt="BOOTSTRAP"/></center>
         <p>
             Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.
             It contains CSS- and (optionally) JavaScript-based design templates for typography, forms, buttons, navigation, and
