--- a/CSS.html
+++ b/CSS.html
@@ -2,7 +2,7 @@
 <html lang="eng">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=2.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>About CSS</title>
         <style>
             p{
@@ -18,7 +18,7 @@
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-        <center><img src="\FullStack\images\css.jpg" alt="CSS"/></center>
+        <center><img src="\FullStack\images\css.jpg" width="500px" height="300px" alt="CSS"/></center>
         <p>
             Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document
             written in a markup language like HTML.CSS is a cornerstone technology of the World Wide Web, alongside
