--- a/JS.html
+++ b/JS.html
@@ -2,7 +2,7 @@
 <html lang="eng">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=2.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>About JavaScript</title>
         <style>
             p{
@@ -18,7 +18,7 @@
         <base href="https://ayushgoyal-cs.github.io">
     </head>
     <body>
-        <center><img src="\FullStack\images\javascript.jpg" alt="JAVASCRIPT"/></center>
+        <center><img src="\FullStack\images\javascript.jpg" width="500px" height="300px" alt="JAVASCRIPT"/></center>
         <p>
             JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
             JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax,dynamic
