--- a/HTML.html
+++ b/HTML.html
@@ -10,7 +10,7 @@
                 text-align: justify;
                 padding: 20px;
                 color: white;
-            }
+                }
             body{
                 background-color: lightgrey;
             }
@@ -19,7 +19,7 @@
     </head>
     <body>
         <center><img src="\FullStack\images\html.jpg" width="500px" height="300px" alt="HTML"/></center>
-        <p>
+        <center><p>
             HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
             Hypertext refers to the way in which Web pages (HTML documents) are linked together. Thus, the link available
             on a webpage is called Hypertext.
@@ -27,6 +27,6 @@
             tags that tell a Web browser how to structure it to display.
             Originally, HTML was developed with the intent of defining the structure of documents like headings, paragraphs, lists,
             and so forth to facilitate the sharing of scientific information between researchers.
-        </p>
+        </p></center>
     </body>
 </html>
