--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Practical-4</title>
+        <title>HOME</title>
         <base href="https://ayushgoyal-cs.github.io">
         <style>
             h3 {
@@ -12,7 +12,6 @@
                 color:seagreen;
             }
           </style>
-          <meta name="viewport" content="width=device-width, initial-scale=" />
     </head>
     <body>
         <h1><b>Welcome to Fullstack Course</b></h1>
