--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
         <p>
         5.Create a Web-Page showing the use of Image-Map in the Web Application. <a href="\FullStack\Practical\Practical-5.html">Practical-5</a>
         </p>
+        <p>
+            6.PRACTICAL-6: Create following LAYOUT using CSS LAYOUT Properties. <a href="\FullStack\Practical\Practical-6.html">Practical-6</a>
+            </p>
     </body>
 </html>
