--- a/Practical/Practical-6.html
+++ b/Practical/Practical-6.html
@@ -49,13 +49,13 @@
         </style>
     </head>
     <body>
-        <h1>PRACTICAL-6: CREATE FOLLOWING LAYPOUT USING CSS LAYOUT PROPERTIES.</h1>
+        <h1>PRACTICAL-6: CREATE FOLLOWING LAYOUT USING CSS LAYOUT PROPERTIES.</h1>
         <div class="column">
             <img src="\FullStack\images\html.jpg" alt="HTML">
             <h3>Introduction to HTML</h3>
             <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
                 Hypertext refers to the way in which.....</p>
-            <a href=\FullStack\HTML.html">Read More</a>
+            <a href="\FullStack\HTML.html">Read More</a>
         </div>
         <div class="column">
             <img src="\FullStack\images\css.jpg" alt="HTML">
