--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
         5.Create a Web-Page showing the use of Image-Map in the Web Application. <a href="\FullStack\Practical\Practical-5.html">Practical-5</a>
         </p>
         <p>
-            6.PRACTICAL-6: Create following LAYOUT using CSS LAYOUT Properties. <a href="\FullStack\Practical\Practical-6.html">Practical-6</a>
+            6.Create following LAYOUT using CSS LAYOUT Properties. <a href="\FullStack\Practical\Practical-6.html">Practical-6</a>
             </p>
+        <p>
+            7.Create a Web Page Layout using div tags. <a href="\FullStack\Practical\Practical-7.html">Practical-7</a>
+        </p>
     </body>
 </html>
