--- a/index.html
+++ b/index.html
@@ -42,5 +42,8 @@
         <p>
             7.Create a Web Page Layout using div tags. <a href="\FullStack\Practical\Practical-7.html">Practical-7</a>
         </p>
+        <p>
+            8.Create a Web Page having Fixed Navigation Bar with the given content. <a href="\FullStack\Practical\Practical-8.html">Practical-8</a>
+        </p>
     </body>
 </html>
