--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -68,12 +68,14 @@
                 color: white;
             }
             #section3{
-                width: 100%;
-                height: 150px;
-                border-radius: 10px;
                 text-align: justify;
                 padding: 2px;
                 clear: both;
+            }
+            #section3 img{
+            width: 100%;
+            height: 150px;
+            border-radius: 10px;
             }
             .column{
                 width: 18%;
@@ -110,7 +112,7 @@
         </style>
     </head>
     <body>
-        <a name="top"></a>
+        <a name="#top"></a>
         <div id="header">
             <ul>
                 <li><a href="#top">HOME</a></li>
