--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -32,7 +32,6 @@
                 font-size: 40px;
                 width: 100%;
                 margin-bottom: 40px;
-                background-image: url("\FullStack\images\practical-8a.jpg");
                 color: white;
 
             }
@@ -123,6 +122,7 @@
             </ul>
         </div>
         <div id="banner">
+            <img src="\FullStack\images\practical-8a.jpg" alt="Banner">
             <h2>Practical-8</h2>
         </div>
         <a name="#section-1"></a>
