--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -31,6 +31,7 @@
             #banner{
                 font-size: 40px;
                 width: 100%;
+                height: 800px;
                 margin-bottom: 40px;
                 color: white;
 
@@ -122,7 +123,7 @@
             </ul>
         </div>
         <div id="banner">
-            <img src="\FullStack\images\practical-8a.jpg" alt="Banner">
+            <img src="\FullStack\images\practical-8a.jpg" width=100% alt="Banner">
             <h2>Practical-8</h2>
         </div>
         <a name="#section-1"></a>
