--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -13,9 +13,11 @@
                 color: white;
                 position: sticky;
                 top: 0;
+                font-size: 30px;
             }
             #header ul li{
                 float: left;
+                list-style-type: none;
                 margin-right: 20px;
             }
             #header ul li a{
@@ -26,14 +28,16 @@
             }
             #header ul li a:hover{
                 color:black;
+                background-color: white;
                
             }
             #banner{
                 font-size: 40px;
                 width: 100%;
-                height: 800px;
+                height: 900px;
                 margin-bottom: 40px;
                 color: white;
+                background-image: url("https://ayushgoyal-cs.github.io/FullStack/images/practical-8a.jpg");
 
             }
             h1{
@@ -123,7 +127,6 @@
             </ul>
         </div>
         <div id="banner">
-            <img src="\FullStack\images\practical-8a.jpg" width=100% alt="Banner">
             <h2>Practical-8</h2>
         </div>
         <a name="#section-1"></a>
