--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -11,6 +11,9 @@
                 background-color: darkgray;
                 height: 50px;
                 color: white;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 position: sticky;
                 top: 0;
                 font-size: 30px;
@@ -24,7 +27,7 @@
                 text-decoration: none;
                 color: white;
                 display: block;
-                padding: 10px;
+                padding: 10px 16px;
             }
             #header ul li a:hover{
                 color:black;
@@ -116,7 +119,7 @@
         </style>
     </head>
     <body>
-        <a name="#top"></a>
+        <a name="top"></a>
         <div id="header">
             <ul>
                 <li><a href="#top">HOME</a></li>
@@ -129,14 +132,14 @@
         <div id="banner">
             <h2>Practical-8</h2>
         </div>
-        <a name="#section-1"></a>
+        <a name="section-1"></a>
         <div id="section1"><h1>Team Members</h1>
             <div class="circle"><img src="\FullStack\images\practical-8c.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8b.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8e.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8d.png" alt="members"></div>
         </div>
-        <a name="#section-2"></a>
+        <a name="section-2"></a>
         <div id="section2"><h1>About Us</h1>
             <div id="aboutproject">
                 <h3>About Project</h3>
@@ -146,7 +149,7 @@
             <div class="project"><img src="\FullStack\images\practical-8g.jpg" alt="Project-2"></div>
             <div class="project"><img src="\FullStack\images\practical-8h.jpg" alt="Project-3"></div>
         </div>
-        <a name="#section-3"></a>
+        <a name="section-3"></a>
         <div id="section3"><h1>Technologies Used</h1>
             <div class="column">
                 <img src="\FullStack\images\html.jpg" alt="HTML">
@@ -177,7 +180,7 @@
                 <a href="\FullStack\BOOTSTRAP.html">Read More</a>
             </div>
         </div>
-        <a name="#section-4"></a>
+        <a name="section-4"></a>
         <div id="section4"><h1>Contact</h1>
             <div id="footer">
                 <p>Website Template for Practical-8</p>
