--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -36,7 +36,6 @@
             }
             #banner{
                 font-size: 40px;
-                width: 100%;
                 height: 900px;
                 margin-bottom: 40px;
                 color: white;
@@ -49,6 +48,7 @@
             #section1{
                 width: 100%;
                 margin: 10px;
+                margin-bottom: 20px;
             }
             .circle img{
                 width: 23%;
@@ -60,6 +60,7 @@
                 width: 100%;
                 margin: 10px;
                 clear: both;
+                margin-bottom: 20px;
             }
             #aboutproject{
                 width:48%;
@@ -78,6 +79,7 @@
                 text-align: justify;
                 padding: 2px;
                 clear: both;
+                margin-bottom: 20px;
             }
             #section3 img{
             width: 100%;
@@ -119,7 +121,7 @@
         </style>
     </head>
     <body>
-        <a name="top"></a>
+        <a id="top"></a>
         <div id="header">
             <ul>
                 <li><a href="#top">HOME</a></li>
@@ -132,14 +134,14 @@
         <div id="banner">
             <h2>Practical-8</h2>
         </div>
-        <a name="section-1"></a>
+        <a id="section-1"></a>
         <div id="section1"><h1>Team Members</h1>
             <div class="circle"><img src="\FullStack\images\practical-8c.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8b.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8e.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8d.png" alt="members"></div>
         </div>
-        <a name="section-2"></a>
+        <a id="section-2"></a>
         <div id="section2"><h1>About Us</h1>
             <div id="aboutproject">
                 <h3>About Project</h3>
@@ -149,7 +151,7 @@
             <div class="project"><img src="\FullStack\images\practical-8g.jpg" alt="Project-2"></div>
             <div class="project"><img src="\FullStack\images\practical-8h.jpg" alt="Project-3"></div>
         </div>
-        <a name="section-3"></a>
+        <a id="section-3"></a>
         <div id="section3"><h1>Technologies Used</h1>
             <div class="column">
                 <img src="\FullStack\images\html.jpg" alt="HTML">
@@ -180,7 +182,7 @@
                 <a href="\FullStack\BOOTSTRAP.html">Read More</a>
             </div>
         </div>
-        <a name="section-4"></a>
+        <a id="section-4"></a>
         <div id="section4"><h1>Contact</h1>
             <div id="footer">
                 <p>Website Template for Practical-8</p>
