--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -36,10 +36,13 @@
             }
             #banner{
                 font-size: 40px;
-                height: 900px;
                 margin-bottom: 40px;
                 color: white;
-                background-image: url("https://ayushgoyal-cs.github.io/FullStack/images/practical-8a.jpg");
+            }
+            #top-left{
+                position: absolute;
+                top:10px;
+                left: 20px;
 
             }
             h1{
@@ -121,7 +124,7 @@
         </style>
     </head>
     <body>
-        <a id="top"></a>
+        <a name="top"></a>
         <div id="header">
             <ul>
                 <li><a href="#top">HOME</a></li>
@@ -132,16 +135,18 @@
             </ul>
         </div>
         <div id="banner">
-            <h2>Practical-8</h2>
+            <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\practical-8a.jpg" width="100%" alt="banner">
+            <div id="top-left">
+            <h2>Practical-8</h2></div>
         </div>
-        <a id="section-1"></a>
+        <a name="section-1"></a>
         <div id="section1"><h1>Team Members</h1>
             <div class="circle"><img src="\FullStack\images\practical-8c.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8b.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8e.png" alt="members"></div>
             <div class="circle"><img src="\FullStack\images\practical-8d.png" alt="members"></div>
         </div>
-        <a id="section-2"></a>
+        <a name="section-2"></a>
         <div id="section2"><h1>About Us</h1>
             <div id="aboutproject">
                 <h3>About Project</h3>
@@ -151,7 +156,7 @@
             <div class="project"><img src="\FullStack\images\practical-8g.jpg" alt="Project-2"></div>
             <div class="project"><img src="\FullStack\images\practical-8h.jpg" alt="Project-3"></div>
         </div>
-        <a id="section-3"></a>
+        <a name="section-3"></a>
         <div id="section3"><h1>Technologies Used</h1>
             <div class="column">
                 <img src="\FullStack\images\html.jpg" alt="HTML">
@@ -182,7 +187,7 @@
                 <a href="\FullStack\BOOTSTRAP.html">Read More</a>
             </div>
         </div>
-        <a id="section-4"></a>
+        <a name="section-4"></a>
         <div id="section4"><h1>Contact</h1>
             <div id="footer">
                 <p>Website Template for Practical-8</p>
