--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -135,7 +135,7 @@
             </ul>
         </div>
         <div id="banner">
-            <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\practical-8a.jpg" width="100%" alt="banner">
+            <img src="\FullStack\images\practical-8a.jpg" width="100%" alt="banner">
             <div id="top-left">
             <h2>Practical-8</h2></div>
         </div>
