--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -38,12 +38,10 @@
                 font-size: 40px;
                 margin-bottom: 40px;
                 color: white;
+                background-image: url("\FullStack\images\practical-8a.jpg");
             }
-            #top-left{
-                position: absolute;
-                top:10px;
-                left: 20px;
-
+            #banner img{
+                width: 100%;
             }
             h1{
                 text-align: center;
@@ -135,9 +133,7 @@
             </ul>
         </div>
         <div id="banner">
-            <img src="\FullStack\images\practical-8a.jpg" width="100%" alt="banner">
-            <div id="top-left">
-            <h2>Practical-8</h2></div>
+            <h2>Practical-8</h2>
         </div>
         <a name="section-1"></a>
         <div id="section1"><h1>Team Members</h1>
