--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=2.0" />
         <title>Practical-8</title>
-        <base href="https://ayushgoyal-cs.github.io">
         <style>
             #header{
                 margin-bottom: 60px;
@@ -36,12 +35,10 @@
             }
             #banner{
                 font-size: 40px;
+                width: 100%;
                 margin-bottom: 40px;
                 color: white;
-                background-image: url("\FullStack\images\practical-8a.jpg");
-            }
-            #banner img{
-                width: 100%;
+                background-image: url("https://ayushgoyal-cs.github.io\FullStack\images\practical-8a.jpg");
             }
             h1{
                 text-align: center;
@@ -137,10 +134,10 @@
         </div>
         <a name="section-1"></a>
         <div id="section1"><h1>Team Members</h1>
-            <div class="circle"><img src="\FullStack\images\practical-8c.png" alt="members"></div>
-            <div class="circle"><img src="\FullStack\images\practical-8b.png" alt="members"></div>
-            <div class="circle"><img src="\FullStack\images\practical-8e.png" alt="members"></div>
-            <div class="circle"><img src="\FullStack\images\practical-8d.png" alt="members"></div>
+            <div class="circle"><img src="https://ayushgoyal-cs.github.io\FullStack\images\practical-8c.png" alt="members"></div>
+            <div class="circle"><img src="https://ayushgoyal-cs.github.io\FullStack\images\practical-8b.png" alt="members"></div>
+            <div class="circle"><img src="https://ayushgoyal-cs.github.io\FullStack\images\practical-8e.png" alt="members"></div>
+            <div class="circle"><img src="https://ayushgoyal-cs.github.io\FullStack\images\practical-8d.png" alt="members"></div>
         </div>
         <a name="section-2"></a>
         <div id="section2"><h1>About Us</h1>
@@ -149,38 +146,38 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nostrum quisquam quasi et consequatur ad. Dignissimos officia sunt, eos eius praesentium ullam sint, cumque suscipit obcaecati, veniam illo impedit vel nisi ipsum fuga aspernatur quibusdam maxime id adipisci ex totam repellendus magni? Ut, repudiandae placeat. Quo odio, maiores praesentium cumque commodi dolorum veniam pariatur illo a eaque aut consequatur iure nemo itaque impedit molestiae excepturi magni tenetur repellat voluptatibus repudiandae ab. Eaque ipsam ratione odio ut libero facere molestias aliquid, quia facilis beatae, sequi sed cum inventore ipsa, maiores repellat! Vero asperiores maiores nostrum molestiae sequi optio laudantium, blanditiis aspernatur nulla beatae molestias. Pariatur ea possimus est commodi quae doloribus. Aliquam nemo quisquam sunt animi iste hic doloremque, itaque sint! Rerum quisquam veritatis autem accusantium laborum. Quae obcaecati distinctio atque delectus eaque eligendi impedit sapiente veritatis ma</p>
             </div>
             <div class="project"><img src="\FullStack\images\practical-8f.jpg" alt="Project-1"></div>
-            <div class="project"><img src="\FullStack\images\practical-8g.jpg" alt="Project-2"></div>
-            <div class="project"><img src="\FullStack\images\practical-8h.jpg" alt="Project-3"></div>
+            <div class="project"><img src="https://ayushgoyal-cs.github.io\FullStack\images\practical-8g.jpg" alt="Project-2"></div>
+            <div class="project"><img src="https://ayushgoyal-cs.github.io\FullStack\images\practical-8h.jpg" alt="Project-3"></div>
         </div>
         <a name="section-3"></a>
         <div id="section3"><h1>Technologies Used</h1>
             <div class="column">
-                <img src="\FullStack\images\html.jpg" alt="HTML">
+                <img src="https://ayushgoyal-cs.github.io\FullStack\images\html.jpg" alt="HTML">
                 <h3>Introduction to HTML</h3>
                 <p>HTML stands for Hypertext Markup Language, and it is the most widely used language to write Web Pages.
                     Hypertext refers to the way in which.....</p>
-                <a href="\FullStack\HTML.html">Read More</a>
+                <a href="https://ayushgoyal-cs.github.io\FullStack\HTML.html">Read More</a>
             </div>
             <div class="column">
-                <img src="\FullStack\images\css.jpg" alt="HTML">
+                <img src="https://ayushgoyal-cs.github.io\FullStack\images\css.jpg" alt="HTML">
                 <h3>Introduction to CSS</h3>
                 <p>Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document
                     written in a markup language like HTML.</p>
-                <a href="\FullStack\CSS.html">Read More</a>
+                <a href="https://ayushgoyal-cs.github.io\FullStack\CSS.html">Read More</a>
             </div>
             <div class="column">
-                <img src="\FullStack\images\javascript.jpg" alt="HTML">
+                <img src="https://ayushgoyal-cs.github.io\FullStack\images\javascript.jpg" alt="HTML">
                 <h3>Introduction to JavaScript</h3>
                 <p>JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
                     JavaScript is high-level, often.....</p>
-                <a href="\FullStack\JS.html">Read More</a>
+                <a href="https://ayushgoyal-cs.github.io\FullStack\JS.html">Read More</a>
             </div>
             <div class="column">
-                <img src="\FullStack\images\bootstrap.jpg" alt="HTML">
+                <img src="https://ayushgoyal-cs.github.io\FullStack\images\bootstrap.jpg" alt="HTML">
                 <h3>Introduction to Bootstrap</h3>
                 <p>Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.
                     It contains CSS- and.....</p>
-                <a href="\FullStack\BOOTSTRAP.html">Read More</a>
+                <a href="https://ayushgoyal-cs.github.io\FullStack\BOOTSTRAP.html">Read More</a>
             </div>
         </div>
         <a name="section-4"></a>
