--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -35,10 +35,11 @@
             }
             #banner{
                 font-size: 40px;
-                width: 100%;
                 margin-bottom: 40px;
                 color: white;
-                background-image: url("https://ayushgoyal-cs.github.io\FullStack\images\practical-8a.jpg");
+                width: 100%;
+                height: 900px;
+                background-image: url("https://ayushgoyal-cs.github.io/FullStack/images/practical-8a.jpg");
             }
             h1{
                 text-align: center;
