--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -37,9 +37,12 @@
                 font-size: 40px;
                 margin-bottom: 40px;
                 color: white;
-                width: 100%;
-                height: 900px;
-                background-image: url("https://ayushgoyal-cs.github.io/FullStack/images/practical-8a.jpg");
+            }
+            #top-left{
+                position: absolute;
+                top: 70px;
+                left: 20px;
+
             }
             h1{
                 text-align: center;
@@ -131,7 +134,9 @@
             </ul>
         </div>
         <div id="banner">
-            <h2>Practical-8</h2>
+            <div id="top-left">
+            <h2>Practical-8</h2></div>
+            <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\practical-8a.jpg" width="100%" alt="banner">
         </div>
         <a name="section-1"></a>
         <div id="section1"><h1>Team Members</h1>
