--- a/Practical/Practical-8.html
+++ b/Practical/Practical-8.html
@@ -136,7 +136,7 @@
         <div id="banner">
             <div id="top-left">
             <h2>Practical-8</h2></div>
-            <img src="C:\Users\ayush\Documents\Full Stack\FullStack\images\practical-8a.jpg" width="100%" alt="banner">
+            <img src="https://ayushgoyal-cs.github.io\FullStack\images\practical-8a.jpg" width="100%" alt="banner">
         </div>
         <a name="section-1"></a>
         <div id="section1"><h1>Team Members</h1>
