--- a/Practical/Practical-9.html
+++ b/Practical/Practical-9.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Practical-9</title>
     <style>
+
         *{
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+        .container{
+            max-width: 100%;
         }
         html {
             scroll-padding-top: 50px;
@@ -413,7 +417,7 @@
              padding-bottom: 30px;
         }
         }
-        @media (max-width: 799px) {
+        @media (max-width: 799px) and (min-width: 626px) {
             #header {
             width: 100%;
             background-color: darkgray;
@@ -614,6 +618,7 @@
              padding-top: 30px;
              padding-bottom: 30px;
         }
+        }
         @media (max-width: 625px) {
             #header {
             width: 100%;
@@ -666,9 +671,12 @@
         #banner h2 {
             padding: 10px 20px;
         }
+        .container{
+            min-width: 300px;
+        }
         #section1 {
             width: 80%;
-            margin: 10px ;
+            margin-left: 20vw;
         }
         #section1::after{
             content: '';
@@ -677,11 +685,9 @@
         }
 
         .circle img {
-            width: 400px;
-            height: 400px;
+            width: 70%;
+            height: 70%;
             border-radius: 50%;
-            margin: 10px;
-            margin-left: 10%;
             }
         #section2 {
             width: 100%;
@@ -741,7 +747,6 @@
         #section3 {
             width: 100%;
             justify-content: center;
-            margin-left: 30px;
         }
 
         #section3::after{
@@ -757,6 +762,8 @@
             text-align: center;
             border-radius: 10px;
             padding: 10px;
+            margin-left: 0 ;
+            margin-left: 15vw;
             }
         .column img{
             width: 100%;
@@ -809,11 +816,11 @@
              padding-bottom: 30px;
         }
         }
-        }
     </style>
 </head>
 
 <body>
+    <div class="container">
     <a name="top"></a>
     <div id="header">
         <input type="checkbox" id="chk" />
@@ -830,10 +837,9 @@
                     <i class="fa fa-times"></i>
                 </label>
             </ul>
-        </div>
+    </div>
     <div id="banner">
         <h2>Practical-9</h2>
-    </div>
     </div>
     <a name="section-1"></a>
     <h1>Team Members</h1>
@@ -870,39 +876,39 @@
     </div>
         <a name="section-3"></a>
         <h1>Technologies Used</h1>
-        <div id="section3">
-            <div class="column">
+    <div id="section3">
+        <div class="column">
                 <img src="../images/html.jpg" alt="HTML">
                 <h4>Introduction to HTML</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, illum odio! Aperiam esse quia blanditiis quasi? Cum itaque recusandae consequuntur!</p>
                 <a href="../HTML.html">Read More</a>
-            </div>
-            <div class="column">
+        </div>
+        <div class="column">
                 <img src="../images/css.jpg" alt="CSS">
                 <h4>Introduction to CSS</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, illum odio! Aperiam esse quia blanditiis quasi? Cum itaque recusandae consequuntur!</p>
                 <a href="../CSS.html">Read More</a>
-            </div>
-            <div class="column">
+        </div>
+        <div class="column">
                 <img src="../images/javascript.jpg" alt="JAVASCRIPT">
                 <h4>Introduction to JavaScript</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, illum odio! Aperiam esse quia blanditiis quasi? Cum itaque recusandae consequuntur!</p>
                 <a href="../JS.html">Read More</a>
-            </div>
-            <div class="column">
+        </div>
+        <div class="column">
                 <img src="../images/bootstrap.jpg" alt="BOOTSTRAP">
                 <h4>Introduction to Bootstrap</h4>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, illum odio! Aperiam esse quia blanditiis quasi? Cum itaque recusandae consequuntur!</p>
                 <a href="../BOOTSTRAP.html">Read More</a>
-            </div>
         </div>
+    </div>
         <a name="section-4"></a>
         <h1>Contact</h1>
-        <div id="footer">
-                <p>Website Template for Practical-9
-                </br>
-                <a href="#top">Back to top</a></p>
-        </div>
+    <div id="footer">
+            <p>Website Template for Practical-9
+            </br>
+            <a href="#top">Back to top</a></p>
+    </div>
+    </div>
 </body>
-
 </html>
