adding social inks

--- a/Practical/Practical-10.html
+++ b/Practical/Practical-10.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div class="container">
+            <input type="checkbox" name="" id="chk">
             <div id="header">
                 <img src="../images/fullstacklogo.png" alt="logo"/>
                 <h1>FullStack</h1>
@@ -17,7 +18,6 @@
                 <img src="../images/Practical-8a.jpg" alt="banner image"/>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ducimus quasi dolores illo tempora? Odio maxime aliquam consequatur dolores iusto quas, tempore, accusamus debitis corporis perspiciatis tempora expedita. Neque officia voluptate similique assumenda vel, explicabo dolorem doloremque suscipit ullam in cupiditate, illum sunt obcaecati autem, possimus officiis? Repellendus culpa nobis ipsa quis esse temporibus delectus aliquam ratione accusamus similique sequi quibusdam error tempore harum veniam consequatur laboriosam nemo obcaecati odio impedit corrupti, quo itaque vero! Dignissimos corporis repudiandae quasi inventore exercitationem maiores a amet aut? Exercitationem enim magnam ipsum itaque deserunt iure vel consequatur quibusdam explicabo suscipit quis, corrupti velit distinctio nihil ipsa eligendi ipsam ratione dignissimos a odit provident dolorem. Ipsam cum sequi dicta asperiores eum quis totam molestias. Omnis, fuga aspernatur? Omnis, dolores? Nam quibusdam laudantium dolorem ipsum velit ducimus voluptatem quaerat excepturi ea error? Rem vitae magni animi officia. Enim nobis in dignissimos consectetur at adipisci dolorem ipsa repellendus eius sit magnam illum recusandae, tenetur aut possimus ducimus commodi. Ratione, assumenda explicabo, tenetur dicta iste quae ex esse voluptas quibusdam et atque perspiciatis quasi veritatis laboriosam id necessitatibus ipsam vitae, eligendi eos quas ut! Necessitatibus ipsam aliquid iusto quis recusandae voluptas nisi fugiat, aut maxime fugit quae magnam deleniti aspernatur quod incidunt ut delectus deserunt? Blanditiis reiciendis ullam obcaecati molestias eos corporis. Velit distinctio sit minima dicta alias nostrum sequi, deserunt sed repellendus dignissimos quibusdam qui corporis impedit, ducimus molestiae. Doloremque hic animi consectetur omnis distinctio! Facilis aspernatur sequi, vero aliquid ut neque quos. Repellendus, magnam ipsa nihil esse debitis odit consequuntur eveniet cupiditate aliquam neque dicta nisi voluptate! Nostrum ipsa, hic excepturi accusantium necessitatibus nobis qui natus error aliquam, iste recusandae ipsum ea delectus laborum culpa amet consequatur quia sed vel sequi doloremque omnis non. Quaerat, obcaecati optio? Cum culpa rerum tempore ea earum quidem. Nam natus fugit soluta enim rem! Iure consectetur voluptas rerum est exercitationem commodi voluptates odio. Eaque, natus voluptatibus voluptatem corporis dolor excepturi sequi labore, fuga repellendus suscipit maxime incidunt fugiat sunt, doloremque ipsam libero totam aliquam aliquid! Quis a aut ea cum eaque aliquid dolor consectetur quas nobis maxime, alias distinctio ipsum voluptas enim in facere similique assumenda debitis, excepturi cumque! Dolor facere deleniti, voluptatem aut repudiandae eaque dolorem, quis, aliquam sequi maxime esse exercitationem nobis sed quod? Laborum corporis ipsam labore aut expedita vel, aspernatur, nemo odio quis ut voluptatibus officiis omnis ipsum? Laborum, ab explicabo amet modi similique ratione natus saepe. Pariatur neque in amet natus, aut officiis quisquam mollitia excepturi? Assumenda, dolor porro. Soluta minima repellendus, sit odio alias quis eligendi laudantium repudiandae a sunt enim nostrum fugit ipsum delectus? Doloremque fugit soluta maiores vel consequuntur repudiandae numquam omnis aspernatur tenetur voluptatem maxime minus iure quod at, aut perspiciatis harum dicta nemo obcaecati corporis quisquam odio repellendus? Impedit, saepe magnam! Excepturi autem illo sequi quae rem, cum optio. Perferendis commodi officiis consequatur laudantium, dolorum eos inventore vero quas vitae delectus laboriosam quae, maxime quisquam accusantium officia dignissimos eaque! Iure numquam culpa cumque, voluptates sequi blanditiis ducimus natus doloremque tempore?</p>
             </div>
-            <input type="checkbox" id="chk"/>
             <label for="chk" class="show-btn">
                 <i class="fa fa-bars"></i>
             </label>
@@ -31,6 +31,11 @@
                     <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
                     <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
                 </ul>
+                <div class="social">
+                    <i class="fa fa-facebook"></i>
+                    <i class="fa fa-instagram"></i>
+                    <i class="fa fa-twitter"></i>
+                </div>
             </div>
         </div>
     </body>
