--- a/Practical/Practical-10.html
+++ b/Practical/Practical-10.html
@@ -27,14 +27,15 @@
             <div class="side-bar">
                 <ul>
                     <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
-                    <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
-                    <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
-                    <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
+                    <li><a href="#"><i class="fa fa-user"></i>About</a></li>
+                    <li><a href="#"><i class="fa fa-tasks"></i>Services</a></li>
+                    <li><a href="#"><i class="fa fa-rss"></i>Blog</a></li>
+                    <li><a href="#"><i class="fa fa-id-card"></i>Contact</a></li>
                 </ul>
                 <div class="social">
-                    <i class="fa fa-facebook"></i>
-                    <i class="fa fa-instagram"></i>
-                    <i class="fa fa-twitter"></i>
+                    <a href="#"><i class="fa fa-facebook-square"></i></a>
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-twitter-square"></i></a>
                 </div>
             </div>
         </div>
