--- a/Practical/Practical-11.html
+++ b/Practical/Practical-11.html
@@ -3,12 +3,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <title>Practical-11</title>
     <style>
-        
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        table{
+            width: 80%;
+            margin: 10px auto;
+            border-spacing: 0;
+            border: 2px solid;
+            border-radius: 10px;
+            font-size: 1.5vw;
+        }
+        tr:first-child th{
+            color: white;
+            background-color: #2c3e50;
+            text-align: center;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+        }
+        tr:last-child td{
+            border-bottom: 0px;
+        }
+        tr,td,th{
+            border-bottom: 1px solid;
+            text-align: left;
+            padding: 5px 20px;
+        }
+        td{
+            text-align: justify;
+        }
+        i{
+            color: darkgray;
+        }
+        a{
+            text-decoration: none;
+            color: darkgrey;
+        }
+        a:hover {
+            color: red;
+        }
+
     </style>
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <th colspan="5">Fullstack Live Practical Book</th>
+        </tr>
+        <tr>
+                <th>#</th>
+                <th>Practical Name</th>
+                <th>Link</th>
+                <th>Status</th>
+                <th>Tools</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td style="width:55%">Create a Web page including HTML basic skeleton using Offline HTML Editor 
+                and Online Sandbox Environment.</td>
+            <td><a href="./Practical-1.html">Practical-1</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Live your First Web-Page on Git-Hub.</td>
+            <td><a href="./Practical-2.html">Practical-2</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Create a web page showing a basic HTML structure using character Entities and span Tag.</td>
+            <td><a href="./Practical-3.html">Practical-3</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Create a website having list of all practicals and their individual
+                practical Page links.</td>
+            <td><a href="./Practical-4.html">Practical-4</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Create a Web-Page showing the use of image-map in the Web Application.</td>
+            <td><a href="./Practical-5.html">Practical-5</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td> Create a Card Layout using CSS layout properties.</td>
+            <td><a href="./Practical-6.html">Practical-6</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>Create a Web Page Layout using div tags.</td>
+            <td><a href="./Practical-7.html">Practical-7</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Create a web page having Fixed Navigation Bar with the given content.</td>
+            <td><a href="./Practical-8.html">Practical-8</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Create a Responsive Web Layout with Responsive Navigation Bar.</td>
+            <td><a href="./Practical-9.html">Practical-9</a></td>
+            <td>Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>Create a Responsive Side-Bar Navigation Menu.</td>
+            <td><a href="./Practical-10.html">Practical-10</a></td>
+            <td>Un-Checked</td>
+            <td><a href="#"><i class="material-icons">edit</i></a>
+                <a href="#"><i class="material-icons">delete</i></a>
+            </td>
+        </tr>
+    </table>
 </body>
 </html>
