--- a/Practical/Practical-11.html
+++ b/Practical/Practical-11.html
@@ -16,15 +16,15 @@
             margin: 10px auto;
             border-spacing: 0;
             border: 2px solid;
-            border-radius: 10px;
+            border-radius: 8px;
             font-size: 1.5vw;
         }
         tr:first-child th{
             color: white;
             background-color: #2c3e50;
             text-align: center;
-            border-top-left-radius: 8px;
-            border-top-right-radius: 8px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
         }
         tr:last-child td{
             border-bottom: 0px;
@@ -32,7 +32,7 @@
         tr,td,th{
             border-bottom: 1px solid;
             text-align: left;
-            padding: 5px 20px;
+            padding: 1vh 1vw;
         }
         td{
             text-align: justify;
@@ -44,8 +44,21 @@
             text-decoration: none;
             color: darkgrey;
         }
-        a:hover {
+        .edit{
+            font-size: 2vw;
+        }
+        .edit:hover{
+            color: blue;
+        }
+        .delete{
+            font-size: 2vw;
+        }
+        .delete:hover{
             color: red;
+        }
+        .tooltip{
+            color: white;
+            background-color: black;
         }
 
     </style>
@@ -68,8 +81,8 @@
                 and Online Sandbox Environment.</td>
             <td><a href="./Practical-1.html">Practical-1</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit" title="edit">edit</i></a>
+                <a href="#"><i class="material-icons delete" title="delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -77,8 +90,8 @@
             <td>Live your First Web-Page on Git-Hub.</td>
             <td><a href="./Practical-2.html">Practical-2</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -86,8 +99,8 @@
             <td>Create a web page showing a basic HTML structure using character Entities and span Tag.</td>
             <td><a href="./Practical-3.html">Practical-3</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -96,8 +109,8 @@
                 practical Page links.</td>
             <td><a href="./Practical-4.html">Practical-4</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -105,8 +118,8 @@
             <td>Create a Web-Page showing the use of image-map in the Web Application.</td>
             <td><a href="./Practical-5.html">Practical-5</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -114,8 +127,8 @@
             <td> Create a Card Layout using CSS layout properties.</td>
             <td><a href="./Practical-6.html">Practical-6</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -123,8 +136,8 @@
             <td>Create a Web Page Layout using div tags.</td>
             <td><a href="./Practical-7.html">Practical-7</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -132,8 +145,8 @@
             <td>Create a web page having Fixed Navigation Bar with the given content.</td>
             <td><a href="./Practical-8.html">Practical-8</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -141,8 +154,8 @@
             <td>Create a Responsive Web Layout with Responsive Navigation Bar.</td>
             <td><a href="./Practical-9.html">Practical-9</a></td>
             <td>Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
         <tr>
@@ -150,8 +163,8 @@
             <td>Create a Responsive Side-Bar Navigation Menu.</td>
             <td><a href="./Practical-10.html">Practical-10</a></td>
             <td>Un-Checked</td>
-            <td><a href="#"><i class="material-icons">edit</i></a>
-                <a href="#"><i class="material-icons">delete</i></a>
+            <td><a href="#"><i class="material-icons edit">edit</i></a>
+                <a href="#"><i class="material-icons delete">delete</i></a>
             </td>
         </tr>
     </table>
