--- a/Practical/Practical-11.html
+++ b/Practical/Practical-11.html
@@ -15,7 +15,7 @@
             width: 80%;
             margin: 10px auto;
             border-spacing: 0;
-            border: 5px solid;
+            border: 2px solid #2c3e50;
             border-radius: 8px;
             font-size: 1.5vw;
         }
@@ -29,16 +29,16 @@
         tr:last-child td{
             border-bottom: 0px;
         }
+        tr:nth-child(2) th{
+            border-bottom: 2px solid darkgray;
+        }
         tr,td,th{
-            border-bottom: 1px solid;
+            border-bottom: 1px solid darkgray;
             text-align: left;
             padding: 1vh 1vw;
         }
         td{
             text-align: justify;
-        }
-        i{
-            color: darkgray;
         }
         a{
             text-decoration: none;
